# clr-desktop-defaults

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  clr-desktop-files.desktop.in  clr-desktop-files.sh  clr-init-flathub-repo  clr-migrate-settings  clr-migrate-settings.desktop.in  configure.ac  meson.build  org.clearlinux.initFlathubRepo.desktop.in
dconf/: meson.build  profile.in
dconf/system-wide.d/: 00-appfolders  00-custom-shortcuts  00-profiles
fontconfig/: 70-disable-x11-75-100-dpi.conf  meson.build
lightdm/: clr-gtk-greeter.conf  clr-lightdm.conf  users.conf
logind.conf.d/: 80-lidswitch.conf  meson.build
mimeapps/: gnome-mimeapps.list  meson.build
schemas/: merge-settings.sh  meson.build  org.gnome.Terminal.ProfilesList.gschema.override  org.gnome.Terminal.gschema.override  org.gnome.desktop.app-folders.gschema.override  org.gnome.desktop.background.gschema.override  org.gnome.desktop.input-sources.gschema.override  org.gnome.desktop.interface-theme.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.peripherals.touchpad.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.desktop.sound.gschema.override  org.gnome.desktop.wm.preferences.gschema.override  org.gnome.nautilus.preferences.gschema.override  org.gnome.settings-daemon.plugins.media-keys.gschema.override  org.gnome.settings-daemon.plugins.power.gschema.override  org.gnome.shell-enabled-extensions.gschema.override  org.gnome.shell.extensions.dash-to-dock.gschema.override  org.gnome.shell.extensions.desktop-icons.gschema.override  org.gnome.shell.extensions.net.gfxmonk.impatience.gschema.override  org.gnome.shell.extensions.user-theme.gschema.override  org.gnome.shell.gschema.override
scripts/: mkrelease.sh
