EXTRA_DIST = \
	LICENSE \
	README.md \
	clr-desktop-files.sh \
	clr-desktop-files.desktop.in \
	lightdm/clr-gtk-greeter.conf \
	lightdm/clr-lightdm.conf

xdgdir = $(datadir)/xdg/autostart

xdg_DATA = \
	clr-desktop-files.desktop

bin_SCRIPTS = \
	clr-desktop-files.sh

# Default configuration for the GTK greeter
lightdm_gtk_confdir = $(datadir)/lightdm/lightdm-gtk-greeter.conf.d
lightdm_gtk_conf_DATA = \
	lightdm/clr-gtk-greeter.conf

lightdm_confdir = $(datadir)/lightdm/lightdm.conf.d
lightdm_conf_DATA = \
	lightdm/clr-lightdm.conf
